Fixed the horizontal scroll issue

--- a/scrolly-styles.css
+++ b/scrolly-styles.css
@@ -9,7 +9,7 @@
     transform: translate(0px, 0px);
     z-index: 0;
     height: 110svh;
-    width: 100vw;
+    width: 100%;
     margin: 0;
     overflow: hidden;
     object-fit: contain;
